--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
     <title>404 Not Found Page</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
 ​
         <main class="container">
             <div class="image">
-            <img src="scarecrow.png" href="espantapajaros">
+            <img src="/scarecrow.png" >
          </div>
         <div class="text">
         <h2>I have bad news for you</h2>
@@ -23,5 +23,10 @@
         </div>
   
         </main>
+
     </body>
+    <footer>
+        <div class="piepag">
+        <p>created by <b>username</b> - devChallenges.io</p></footer>
+    </div>
 </html>
