--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 class="title">404 Not Found Page</h1>
+        <h1 class="title">404 Not Found </h1>
     </header>
 ​
         <main class="container">
